--- a/assets/style.css
+++ b/assets/style.css
@@ -24,38 +24,34 @@ footer ul {
     padding: 50px;
 }
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: gray;
-    padding: 10px;
+    padding: 30px 10%;
+}
+
+.navbar {
+    list-style: none;
+}
+
+.navbar li {
+    display: inline-block;
+    padding: 0px 15px;
+}
+
+.navbar li a {
+    transition: all 0.3s ease 0s;
+}
+
+.navbar li a:hover {
+    color: aqua;
 }
 
 header h1 {
     font-size: 35px;
+    font-weight: 200;
     border-style: solid;
     border-color: aqua;
-    display: inline;
+    display: inline-flex;
 }
-.navbar {
-    width: 100%;
-    background-color: rgb(128, 128, 128);
-    overflow: hidden;
-    padding: 10px;
-
-}
-
-.navbar a {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    float: right;
-    justify-content: space-between;
-
-}
-
-nav ul>a:hover {
-    color: rgb(65, 177, 241);
-    text-decoration: none;
-    animation-name: text_fadein;
-    animation-duration: 0.3s;
-    animation-fill-mode: forwards;
-}
-
