--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,7 @@
     --light: rgba(238, 238, 247, 1);
   }
 
+
 header {
     border: 1px dashed rgba(0, 0, 0, 0.5);
     background-color: var(--tertiary);
@@ -60,39 +61,34 @@ header {
 
 main {
     border: 1px dashed rgba(0, 0, 0, 0.5);
-}
-.top-content {
-    border: 1px dashed rgba(0, 0, 0, 0.5);  
-    display: flex; 
-    justify-content: space-between;
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.content-name h3 {
+section {
+    display: flex;
+    margin: 40px 0;
+}
+
+.content-name {
     border: 1px dashed rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: space-between;
+    width: 20%;   
+    border-right: solid  5px var(--primary);
     font-size: 50px;
-    
+    text-align: right;
 }
 
 .paragraph {
     border: 1px dashed rgba(0, 0, 0, 0.5);
-}
 
-.middle-content {
-    border: 1px dashed rgba(0, 0, 0, 0.5); 
-    display: flex;   
-    justify-content: space-between;
-}
-
-.middle-content-name h3 {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
-    font-size: 50px;
 }
 
 .flex-container {
     border: 1px dashed rgba(0, 0, 0, 0.5);
     display: flex;
     flex-wrap: wrap;
+    
 }
 
 .flex-item {
@@ -108,10 +104,6 @@ main {
     border: 1px dashed rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: space-between;
+    font-size: 50px;
+    
 }
-
-.final-content-name {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
-}
-
-
