--- a/assets/style.css
+++ b/assets/style.css
@@ -8,25 +8,21 @@
 
 
 header {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     background-color: var(--tertiary);
 }  
 
 .top-header{
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: space-between;
     margin: 25px 0px;
 }
 
 .website-title {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     color: var(--secondary);
     font-size: 25px;
 }
 
 .website-title h1 {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     padding-left: 50px;
     background-color: var(--secondary);
     color: var(--primary);
@@ -39,22 +35,26 @@ header {
 }
 
 .navbar a {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     color: var(--secondary);
     font-size: 25px;
 
 }
 
-.bottom-header {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
+#bottom-header {
     height: 200px;
     background-image: linear-gradient(0deg, rgba(68, 88, 119, 1), rgba(217, 227, 233, 0.5)), url(./images/02-hero-bg.jpg);
     background-size: cover;
     position: relative;
 }
 
+#bottom-header img {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: auto;
+}
 .subtitle {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     background-color: var(--secondary);
     color: var(--primary);
     position: absolute;
@@ -67,7 +67,6 @@ header {
 }
 
 main {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -77,52 +76,91 @@ section {
 }
 
 .content-name {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: space-between;
     width: 20%;   
     border-right: solid  5px var(--primary);
     font-size: 50px;
     text-align: right;
+    
 }
 
 .paragraph {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     width: 80%;
 }
 
-.flex-container {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
+#work {
     display: flex;
-    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex: 0 0 80%;
+    
+}
+
+div h4 {
+    position: absolute;
+    background-color: var(--secondary);
+    bottom: 5%;
+    left: 0;
+    padding: 5px 10px;
+
+}
 .flex-item {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
-    flex: 1;
+    flex: 0 0 40%;
+    min-width: 40%;
+    max-width: 40%;
+    height: auto;
+    margin: 20px auto;
+    position: relative;
 }
 
 .big-picture {
-    flex: 2;  
-}
-
-.flex-item img {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
-    max-width: 100%;
+    flex: 0 0 90%;
+    min-width: 90%;
+    max-width: 90%;
     height: auto;
 }
 
+.flex-item img {
+    width: 100%;
+    height: 100;
+    left: 0;
+    right: 0;
+}
+
 .final-content {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: space-between;  
     
 }
 .final-content a {
-    border: 1px dashed rgba(0, 0, 0, 0.5);
     color: var(--secondary);
     font-size: 25px;
     width: 300px;
     text-align: center;
     padding: 10px;
 }
+
+@media screen and (max-width: 992px) {
+    .column {
+      width: 50%;
+    }
+  }
+
+@media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+
+  @media screen and (min-width: 100px) {
+    .column {
+      width: 100%;
+    }
+  }
