--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,10 @@ header {
 .navbar a {
     color: var(--secondary);
     font-size: 25px;
+    text-decoration: none;
+}
+.navbar a:hover{
+    color: var(--light);
 }
 
 #bottom-header {
@@ -142,7 +146,7 @@ section {
 }
 
 .flex-item:hover{
-    border: solid 2px blue;
+    border: solid 2px var(--primary);
     
 }
 .final-content {
@@ -152,7 +156,7 @@ section {
     
 }
 .final-content a {
-    color: var(--secondary);
+    color: var(--primary);
     font-size: 25px;
     width: 300px;
     text-align: center;
