--- a/assets/style.css
+++ b/assets/style.css
@@ -1,177 +1,182 @@
 :root {
-    --primary: rgba(68, 88, 119, 1);
-    --secondary: rgba(146, 204, 206, 1);
-    --tertiary: rgba(49, 52, 61, 1);
-    --dark: rgba(28, 29, 33, 1);
-    --light: rgba(238, 238, 247, 1);
-  }
-
+  --primary: rgba(68, 88, 119, 1);
+  --secondary: rgba(146, 204, 206, 1);
+  --tertiary: rgba(49, 52, 61, 1);
+  --dark: rgba(28, 29, 33, 1);
+  --light: rgba(238, 238, 247, 1);
+}
 
 header {
-    background-color: var(--tertiary);
-}  
+  background-color: var(--tertiary);
+}
 
-.top-header{
-    display: flex;
-    justify-content: space-between;
-    margin: 25px 0px;
+.top-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px;
 }
 
 .website-title {
-    color: var(--secondary);
-    font-size: 25px;
+  color: var(--secondary);
+  font-size: 25px;
+  font-weight: bold;
 }
 
-.website-title h1 {
-    padding-left: 50px;
-    background-color: var(--secondary);
-    color: var(--primary);
+.website-title a {
+  background-color: var(--secondary);
+  color: var(--primary);
+  padding: 5px;
+  text-decoration: none;
 }
 
 .navbar {
-    display: flex;
-    width: 630px;
-    justify-content: space-between;
+  display: flex;
+  width: 630px;
+  justify-content: space-between;
 }
 
 .navbar a {
-    color: var(--secondary);
-    font-size: 25px;
-    text-decoration: none;
+  color: var(--secondary);
+  font-size: 25px;
+  text-decoration: none;
+  padding: 5px;
+  transition: 1s;
 }
-.navbar a:hover{
-    color: var(--light);
+.navbar a:hover {
+  color: var(--light);
 }
 
 #bottom-header {
-    height: 200px;
-    background-image: linear-gradient(0deg, rgba(68, 88, 119, 1), rgba(217, 227, 233, 0.5)), url(./images/02-hero-bg.jpg);
-    background-size: cover;
-    position: relative;
+  height: 200px;
+  background-image: linear-gradient(
+      0deg,
+      rgba(68, 88, 119, 1),
+      rgba(217, 227, 233, 0.5)
+    ),
+    url(./images/02-hero-bg.jpg);
+  background-size: cover;
+  position: relative;
 }
 
 #bottom-header img {
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: auto;
 }
 .subtitle {
-    background-color: var(--secondary);
-    color: var(--primary);
-    position: absolute;
-    right: 0;
-    bottom: 0;
+  background-color: var(--secondary);
+  color: var(--primary);
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .subtitle h2 {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 main {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 section {
-    display: flex;
-    margin: 40px 0;
+  display: flex;
+  padding: 60px;
 }
 
 .content-name {
-    display: flex;
-    justify-content: space-between;
-    width: 20%;   
-    border-right: solid  5px var(--primary);
-    font-size: 50px;
-    text-align: right;
-    
+  width: 20%;
+  border-right: solid 5px var(--primary);
+  font-size: 70px;
+  text-align: right;
+  padding: 10px;
 }
 
 .paragraph {
-    width: 80%;
-    text-align: center;
+  width: 80%;
+  text-align: center;
+}
+
+p {
+  padding: 60px;
+  font-size: 20px;
+  line-height: 2;
 }
 
 #work {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .flex-container {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex: 0 0 80%;
-    
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex: 0 0 80%;
 }
 
 .flex-container a {
-    position: absolute;
-    background-color: var(--secondary);
-    bottom: 5%;
-    left: 0;
-    padding: 5px 10px;
-    color: bold var(--primary);
-    font-size: 20px;
-    text-decoration: none;
-    
-
+  display: flex;
+  background-color: var(--secondary);
+  padding: 10px 30px;
+  color: bold var(--primary);
+  font-size: 20px;
+  text-decoration: none;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
 }
+
 .flex-item {
-    flex: 0 0 40%;
-    min-width: 40%;
-    max-width: 40%;
-    height: auto;
-    margin: 20px auto;
-    position: relative;
+  flex: 0 0 40%;
+  min-width: 40%;
+  max-width: 40%;
+  height: auto;
+  margin: 20px auto;
+  position: relative;
+  transition: 1s;
 }
 
 .big-picture {
-    flex: 0 0 90%;
-    min-width: 90%;
-    max-width: 90%;
-    height: auto;
+  flex: 0 0 90%;
+  min-width: 90%;
+  max-width: 90%;
+  height: auto;
 }
 
 .flex-item img {
-    width: 100%;
-    height: 100;
-    left: 0;
-    right: 0;
-    background-image: cover;
-    background-repeat: no-repeat;
-    background-size: contain;
+  width: 100%;
+  height: 100%;
 }
 
-.flex-item:hover{
-    border: solid 2px var(--primary);
-    
+.flex-item:hover {
+  border: solid 10px var(--secondary);
+  opacity: 0.8;
 }
-.final-content {
-    display: flex;
-    justify-content: space-between; 
-    position: relative;; 
+/* .final-content {
     
-}
+} */
 .final-content a {
-    color: var(--primary);
-    font-size: 25px;
-    width: 300px;
-    text-align: center;
-    padding: 10px;
-    text-decoration: none;
+  display: inline-table;
+  color: var(--primary);
+  font-size: 25px;
+  text-align: center;
+  padding: 28px;
+  margin: 8px;
+  text-decoration: none;
 }
 
 @media screen and (max-width: 992px) {
-    main {
-      width: 50%;
-    }
+  main {
+    width: 50%;
   }
+}
 
 @media screen and (max-width: 768px) {
-    main {
-      width: 100%;
-    }
+  main {
+    width: 100%;
   }
+}
