--- a/assets/style.css
+++ b/assets/style.css
@@ -40,7 +40,7 @@ header {
   font-size: 25px;
   text-decoration: none;
   padding: 5px;
-  transition: 1s;
+  transition: .5s;
 }
 .navbar a:hover {
   color: var(--light);
@@ -137,7 +137,7 @@ p {
   height: auto;
   margin: 20px auto;
   position: relative;
-  transition: 1s;
+  transition: .5s;
 }
 
 .big-picture {
